infra/k8s/events-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: yomielect/event-bus
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          #ports:
          #  - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: events-srv
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
