infra/k8s/moderations-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderations-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderations
  template:
    metadata:
      labels:
        app: moderations
    spec:
      containers:
        - name: moderations
          image: yomielect/moderations
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          #ports:
          #  - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: moderations-srv
spec:
  type: ClusterIP
  selector:
    app: moderations
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
