infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: yomielect/query
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          #ports:
          #  - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
